can get action test working?

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+  <div data-controller="hello">
+    Check your browser console to see if Stimulus is working!
+  </div>
     <%= yield %>
   </body>
 </html>
